about mshr rev01 - initial commit

--- a/edx-abouts/mooc-ungs.html
+++ b/edx-abouts/mooc-ungs.html
@@ -61,29 +61,29 @@ h3{
 <h3 class="title_page_programme titolo_gc_europe margin_bottom_30">Memory Sites and Human Rights</h3>
 
 <div class="ce_text description_page_programme block">
-<p class="margin_bottom_20">Why and how do we remember past atrocities and human rights violations? What is the role of memory sites in social reconstruction, transitional justice and democratisation? How do memory sites shape communities, societies, identities and nations? </p>
+<p class="margin_bottom_20">Despite the fact that the Convention of the Rights of the Child affirms that, in principle, children should not be detained and deprivation of liberty should be a measure of last resort, millions of children in the world are locked away.</p>
 
-<p class="margin_bottom_20">As witnesses and testimonies of abuse and horror, memory sites aspire to build reflection, teaching and learning, critical memory and non-repetition. Memory is dynamic and constantly evolving, so memory sites function as places where to look at the past to better understand and shape the present and the future of a society and its approach to human rights. As “sites of conscience” drawing on history lessons, memory sites stimulate dialogue and healing, and inspire citizens’ action.</p>
+<p class="margin_bottom_20">To assess and address this situation, the United Nations appointed Prof. Manfred Nowak as Independent Expert to lead an in-depth Global Study on children deprived of liberty.</p>
 
-<p class="margin_bottom_20">As witnesses and testimonies of abuse and horror, memory sites aspire to build reflection, teaching and learning, critical memory and non-repetition. Memory is dynamic and constantly evolving, so memory sites function as places where to look at the past to better understand and shape the present and the future of a society and its approach to human rights. As “sites of conscience” drawing on history lessons, memory sites stimulate dialogue and healing, and inspire citizens’ action.</p>
+<p class="margin_bottom_20">This MOOC stems from the UN Global Study and provides insights, learning and recommendations in this important area at the crossroad of children, violence, and human rights studies.</p>
 
 <p>&nbsp;</p>
-<div class="video169_container"><iframe class="video169" src="https://player.vimeo.com/video/252703080?title=0&byline=0&portrait=0" frameborder="0" allowfullscreen="">
+<div class="video169_container"><iframe class="video169" src="https://www.youtube.com/embed/kv39MU27knc" frameborder="0" allowfullscreen="">
 </iframe></div></div>
 
 <div class="ce_text description_page_programme block">
     <p class="subtitle_page_programme">Course Outline</p>
 
-    <p class="margin_bottom_20">The course is articulated in three modules:</p>
+    <p class="margin_bottom_20">The course is articulated in four modules:</p>
 
     <ul class="lista_con_pallini margin_bottom_20">
-        <li><strong>Module 1</strong> focuses on the conceptual framework behind memory sites. Starting from a reflection on why and what is important to remember, it then moves to discuss how memories are shaped and who is involved in 'building memory'. It will show the linkage between history, memory and human rights and the role of memorialization in reconciliation and social reconstruction.</li>
+        <li><strong>Module 1</strong> focuses on <strong>the general framework of the Study</strong> and looks at legal standards, guiding principles, definitions, objectives and methodology. It also offers an overview of the history of the Global Study and its links with the work of the UN Special Rapporteur on the Sale and Sexual Exploitation of Children and the UN Committee on the Rights of the Child.</li>
 
-        <li><strong>Module 2</strong> focuses on the conceptual framework behind memory sites. Starting from a reflection on why and what is important to remember, it then moves to discuss how memories are shaped and who is involved in 'building memory'. It will show the linkage between history, memory and human rights and the role of memorialization in reconciliation and social reconstruction.</li>
+        <li><strong>Module 2</strong> deals with the <strong>cross-cutting</strong> themes that have been identified in the Study: personal liberty, children’s participation, disability, gender and health.</li>
 
-        <li><strong>Module 3</strong> will focus on the aspects related to the 'design' of memory sites, thus dealing with format and content, use of testimonials and symbolic resources, artistic language and types of institutional approaches, stressing the artistic contextualization vis-à-vis the visitors' reactions and empathetic sentiments for past atrocities and abuses.</li>
+        <li><strong>Module 3</strong> is dedicated to the <strong>six focus areas of the Study</strong>: administration of justice, children living in places of detention with their primary caregivers, migration-related detention, children deprived of liberty in institutions, in armed conflict and for national security reasons.</li>
 
-        <!--<li><strong>Module 4</strong> looks at the making of the UN Global Study in practice and discusses challenges, opportunities, recommendations and the way forward.</li>-->
+        <li><strong>Module 4</strong> looks at the making of the UN Global Study in practice and discusses challenges, opportunities, recommendations and the way forward.</li>
     </ul>
 </div>
 <!--
@@ -271,17 +271,22 @@ h3{
 
     <p class="margin_bottom_20"></p>
 
-    <p class="margin_bottom_20">On completion of the course, participants will gain:</p>
+    <p class="margin_bottom_20">Upon completion of the course participants will have acquired:</p>
 
     <ul class="lista_con_pallini margin_bottom_20">
-        <li>Understanding of the interconnection and interdependence between history, memory, art and human rights</li>
-        <li>Knowledge of "symbolic reparation" as part of the mechanisms of transitional justice and its contribution to the processes of reconciliation and democratisation</li>
-        <li>Awareness about the relational complexity of actors involved in creation of memory sites in diverse political and cultural context</li>
-        <li>Awareness of the role of ethnicity, religion and gender in the memorialization process</li>
-        <li>Knowledge of the influence of memory sites in shaping communities, identities, societies and nations</li>
-        <li>Awareness of the problems and challenges in creating memory sites</li>
-        <li>Knowledge of the "sites of conscience", their educational benefits and effects for contemporary human rights issues</li>
-        <li>Insights of the role of artistic language and institutional design on memorialization, democratisation and justice</li>
+        <li>Understanding of the process behind the UN Global Study;</li>
+
+        <li>Knowledge about international standards for the protection of the human rights of children deprived of liberty;</li>
+
+        <li>Awareness of data, reasons and root-causes in the area of deprivation of liberty for children;</li>
+
+        <li>Information on some contextual situations, examples, and practices from different regions of the world;</li>
+
+        <li>Understanding of challenges and limitations in the current systems;</li>
+
+        <li>The ability to identify some legal, political and social strategies to safeguard the human rights of children deprived of liberty;</li>
+
+        <li>Knowledge of recommendations to bring about change and improvements.</li>
     </ul>
 
     <p></p>
