fixed clas="maiuscoletto" in EMA

--- a/website/menu-deadline-ema-2020-DE.html
+++ b/website/menu-deadline-ema-2020-DE.html
@@ -26,7 +26,7 @@
 </aside>
 <section class="container no_margin_bottom">
     <div class="ce_text title_page_programme_e_logo block">
-        <h3 class="title_page_programme titolo_gc_europe"><span style="dispaly: inline-block;">EMA</span>, The European Master’s Programme in Human Rights and Democratisation</h3>
+        <h3 class="title_page_programme titolo_gc_europe"><span style="dispaly: inline-block;" class="maiuscoletto">EMA</span>, The European Master’s Programme in Human Rights and Democratisation</h3>
         <p><img class="logo_universita" src="files/eiuc/logo_EMA.svg" alt="logo università"></p>
     </div>
     <div class="ce_text cta_mobile block">
@@ -42,3 +42,45 @@
         </div>
         <p><a href="education/regional-programmes/ema/how-to-apply.html"><button class="button button--aylen button_europe button--aylen_europe no_margin_bottom">Apply</button></a></p>
     </div>
+    <style>
+    .alert {
+        padding: 20px;
+        background-color: #f44336;
+        color: white;
+
+        transition: opacity 0.6s;
+        margin-bottom: 15px;
+        min-height: 50px;
+        border-radius: 4px;
+    }
+
+    .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    .closebtn: hover {
+
+        color: #75716e;
+
+    }
+
+    .alert.info {
+        background-color: #009fe3;
+        font-size: 18px;
+        vertical-align: center;
+    }
+    </style>
+
+    <div class="alert info">
+        <span class="closebtn" onclick="this.parentElement.style.display='none';">×</span>
+        <!--<i class="fa fa-info-circle" style="font-size: 22px;"></i>-->
+       The Global Campus is mindful of how the COVID-19 pandemic is causing major disruptions to our lives, both professional and personal. While we are moving forward as planned with the organisation of the 2020/2021 EMA Programme at this moment in time, we have extended the application deadline. <strong>We will accept applications until 12 May</strong>, but please note that <strong>these applications will not be eligible for financial aid</strong> because of the lack of sufficient processing time.
+    </div>
+    <p class="margin_bottom_20"></p>
