fixed links and correct spacing on about mshr

--- a/edx-abouts/mooc-mshr.html
+++ b/edx-abouts/mooc-mshr.html
@@ -314,7 +314,7 @@ h3{
                         <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">How do I enrol in the course?</h3>
 
                         <div class="ce_text block">
-                            <p>In order to enrol, please follow the instructions on our <a class="titolo_gc_europe" href="https://gchumanrights.org/education/e-learning/moocs/children-deprived-of-liberty-learning-from-the-un-global-study/how-to-enrol.html">“How to Enrol”</a> webpage. This will then lead you to the OpenEdX course page. Once you are there, you can start the enrolment process by clicking the "enrol" button</p>
+                            <p>In order to enrol, please follow the instructions on our <a class="titolo_gc_europe" href="https://gchumanrights.org/education/e-learning/moocs/memory-sites-and-human-rights/how-to-enrol.html" target="_blank">“How to Enrol”</a> webpage. This will then lead you to the OpenEdX course page. Once you are there, you can start the enrolment process by clicking the "enrol" button</p>
                         </div>
                     </section>
 
@@ -419,7 +419,7 @@ h3{
                         <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">Is there a schedule for the course or is it self-directed?</h3>
 
                         <div class="ce_text block">
-                            <p>The course is self-paced so participants can study in their own time. However, to enhance peer learning, interactive participation and self-assessment, weekly topics and discussions as well as module quizzes are proposed at set dates. In any case, they are all open until the end of the course to facilitate access and completion at any preferred time. For a detailed description of the schedule check the <a class="titolo_gc_europe" href="https://gchumanrights.org/education/e-learning/moocs/children-deprived-of-liberty-learning-from-the-un-global-study/course-outline.html">course outline page</a>on our website.</p>
+                            <p>The course is self-paced so participants can study in their own time. However, to enhance peer learning, interactive participation and self-assessment, weekly topics and discussions as well as module quizzes are proposed at set dates. In any case, they are all open until the end of the course to facilitate access and completion at any preferred time. For a detailed description of the schedule check the <a class="titolo_gc_europe" href="hhttps://gchumanrights.org/education/e-learning/moocs/memory-sites-and-human-rights/course-outline.html" target="_blank">course outline page</a> on our website.</p>
 
                         </div>
                     </section>
@@ -494,7 +494,7 @@ h3{
                         <h3 id="i-have-the-citizenship-of-canada-e-g-can-i-apply-for-the-erma-programme">What do I need to do to get the certificate of participation?</h3>
 
                         <div class="ce_text block">
-                            <p>At the end of the course, if you have actively contributed in at least 5 weekly discussions and successfully passed 4 quizzes, you will receive a certificate confirming your participation. Before submitting your request in the certificate page, please make sure you have submitted the Welcome Survey and the User Experience Survey.</p>
+                            <p>At the end of the course, if you have actively contributed in at least 4 weekly discussions and successfully passed 4 quizzes, you will receive a certificate confirming your participation. Before submitting your request in the certificate page, please make sure you have submitted the Welcome Survey and the User Experience Survey.</p>
                         </div>
                     </section>
 
