added <a name=""></a> where needed

--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -1,4 +1,5 @@
 <div class="table_accordion">
+    <a name="ms"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Maria_Sondereguer_global_campus_eiuc.jpg" alt="María Sonderéguer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Professor at the University of Quilmes</p>
@@ -23,6 +24,7 @@
             </div>
         </div>
     </div>
+    <a name="vb"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Valeria_Barbuto_global_campus_eiuc.jpg" alt="Valeria Barbuto - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Anthropologist</p>
@@ -43,6 +45,7 @@
             </div>
         </div>
     </div>
+    <a name="nc"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Nora_Cortinas_global_campus_eiuc.jpg" alt="Nora Cortiñas - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Founder of the movement Mothers of Plaza de Mayo</p>
@@ -83,6 +86,7 @@
             </div>
         </div>
     </div>
+    <a name="jg"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" alt="Jasminko Halilovic - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_arab"><span class="maiuscoletto">arma</span> Lecturer</p>
@@ -103,6 +107,7 @@
             </div>
         </div>
     </div>
+    <a name="jh"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jasminko_Halilovic_global_campus_eiuc.jpg" alt="Jasminko Halilovic - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Founder and Director of the War Childhood Museum</p>
@@ -124,6 +129,7 @@
             </div>
         </div>
     </div>
+    <a name="pk"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Prajak_Kongkirati_global_campus_eiuc.jpg" alt="Prajak Kongkirati - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Research Director of the Faculty of Political Science, Thammasat University, Thailand</p>
@@ -145,6 +151,7 @@
             </div>
         </div>
     </div>
+    <a name="an"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Alejandra_Naftal_global_campus_eiuc.jpg" alt="Alejandra Naftal - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Executive Director and co-curator of the ESMA Memory Site Museum</p>
@@ -165,6 +172,7 @@
             </div>
         </div>
     </div>
+    <a name="as"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Albie_Sachs_global_campus_eiuc.jpg" alt="Albie Sachs - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_africa">Former judge on the Constitutional Court of South Africa.</p>
@@ -185,6 +193,7 @@
             </div>
         </div>
     </div>
+    <a name="ts"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Tarik_Samarah_global_campus_eiuc.jpg" alt="Tarik Samarah - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Photographer and Founder of the Memorial Gallery</p>
@@ -206,6 +215,7 @@
             </div>
         </div>
     </div>
+    <a name="jt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jorge_Taiana_global_campus_eiuc.jpg" alt="Dr. Jorge E. Taiana - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america"><span class="maiuscoletto">latma</span> Programme Director</p>
@@ -226,6 +236,7 @@
             </div>
         </div>
     </div>
+    <a name="pt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Patricia_Tappata_global_campus_eiuc2.jpg" alt="Patricia Tappatá Valdez - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Director of the CIPDH</p>
@@ -250,6 +261,7 @@
             </div>
         </div>
     </div>
+    <a name="vt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Vesna_Terselic_global_campus_eiuc.jpg" alt="Vesna Teršelić - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Director of the Documenta - Centre for Dealing with the Past</p>
@@ -270,6 +282,7 @@
             </div>
         </div>
     </div>
+    <a name="gu"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/george_ulrich.jpg" alt="George Ulrich - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">ema</span> Programme Director</p>
