fixed Vesna title

--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -264,7 +264,7 @@
     <a name="vt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Vesna_Terselic_global_campus_eiuc.jpg" alt="Vesna Teršelić - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_south_east_europe">Director of the Documenta - Centre for Dealing with the Past</p>
+            <p class="ruolo_persona titolo_gc_south_east_europe">Director of Documenta - Centre for Dealing with the Past, Right Livelihood Award Laureate</p>
             <p class="subtitle_page_programme margin_bottom_20">Vesna Teršelič</p>
             <p class="margin_bottom_20">Vesna Teršelić (1962) was born in Ljubljana, and currently lives in Croatia. She studied at the Faculty of Philosophy and at the Faculty of Science and Mathematics in Zagreb. She is a co-founder of several environmental, women and peace organizations (Svarun, Green Action, Anti-war Campaign of Croatia, Centre for Women's Studies, Centre for Peace Studies etc).</p>
             <div class="text_read_more">
