fixed GU title & First Module Outline

--- a/website/mshr/course-outline.html
+++ b/website/mshr/course-outline.html
@@ -1,10 +1,5 @@
-<p class="margin_bottom_20">The course encompasses a 9-week period. Participants are expected to engage in approximately 45 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
-<p class="margin_bottom_20">The course is articulated in four modules:</p>
+<p class="margin_bottom_20">The course encompasses a 8-week period. Participants are expected to engage in approximately 40 hours of active learning through readings, videos, discussions, group-work/role-plays and quizzes. </p>
 
-<p class="margin_bottom_20"><strong>Module 1</strong> focuses on <strong>the general framework of the Study</strong> and looks at the legal framework, applicable standards, guiding principles, definitions, objectives and methodology. It also offers an overview of the history of the Global Study and its links with the work of the UN CRC Committee and the Special Rapporteur on the Sale and Sexual Exploitation of Children.</p>
-<p class="margin_bottom_20"><strong>Module 2</strong> deals with the <strong>cross-cutting themes</strong> that have been identified in the Study: deprivation of liberty, children’s participation, disability, gender and health.</p>
-<p class="margin_bottom_20"><strong>Module 3</strong> is dedicated to the <strong>six focus areas</strong> of the Study: administration of justice, children living in places of detention with their primary caregivers, migration-related detention, children deprived of liberty in institutions, in armed conflict and for national security reasons.</p>
-<p class="margin_bottom_20"><strong>Module 4</strong> reveals the ‘behind the scenes’ of the making of the <strong>UN Global Study in practice</strong> and discusses challenges, opportunities, recommendations and the way forward.</p>
 <p class="margin_bottom_20">[nbsp]</p>
 
 <style>
@@ -150,32 +145,66 @@
 
 
 
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 1 - General framework of the Global Study</h3>
+<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 1 - The Conceptual Framework</h3>
 
 <ul class="timeline">
     <li>
       <div class="timeline-badge first1">1</div>
       <div class="timeline-panel">
         <div class="timeline-heading">
-          <h4 class="timeline-title">18 - 24 November 2019</h4>
-          <h4 class="timeline-title">Introduction and framework of the UN Global Study</h4>
+          <h4 class="timeline-title">27 April – 3 May 2020</h4>
+          <h4 class="timeline-title">Why and what we remember: The dialogue between memory, history and human rights</h4>
         </div>
         <div class="timeline-body">
         	<p>
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#mn" title="Manfred Nowak">Manfred Nowak</a>, SG Global Campus of Human Rights / Global Study Independent Expert
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#msp" title="Marta Santos Pais">Marta Santos Pais</a>, SRSG on Violence against Children 2009-2019 
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#as" title="Ann Skelton">Ann Skelton</a>, University of Pretoria/CRC Committee
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#ms" title="Maria Sonderéguer">Maria Sonderéguer</a>, Professor at the University of Quilmes
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vesna Teršelić">Vesna Teršelić</a>, Director of Documenta - Right Livelihood Award Laureate 
+            <!--  <br><a class="titolo_gc_europe" href="{{link_url::316}}#as" title="Ann Skelton">Ann Skelton</a>, University of Pretoria/CRC Committee
             <br><a class="titolo_gc_europe" href="{{link_url::316}}#bm" title="Benyam Mezmur">Benyam Mezmur</a>, CRC Committee
-            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University -->
           	</p>
         </div>
       </div>
     </li>
-
-
+    <li class="timeline-inverted">
+      <div class="timeline-badge third3">2</div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">4 – 10 May 2020</h4>
+          <h4 class="timeline-title">How we remember: Memories as (de)construction of historical injustices</h4>
+        </div>
+        <div class="timeline-body">
+        <p>
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#as" title="Albie Sachs">Albie Sachs</a>, Former judge on the Constitutional Court of South Africa
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#gu" title="George Ulrich">George Ulrich</a>, Global Campus Academic Director
+        <!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#cda" title="Catalina Devandas Aguilar">Catalina Devandas Aguilar</a>, UN Special Rapporteur on persons with disabilities
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#mgt" title="Meskerem Geset Tachune">Meskerem Geset Tachunek</a>, UN Working Group on Discrimination against Women
+        <br><a class="titolo_gc_europe" href="{{link_url::316}}#sk" title="Stuart Kinner">Stuart Kinner</a>, University of Melbourne -->
+          </p>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="timeline-badge first1">1</div>
+      <div class="timeline-panel">
+        <div class="timeline-heading">
+          <h4 class="timeline-title">11 – 17 May 2020</h4>
+          <h4 class="timeline-title">Who remembers: Memorialisation as reconstruction and democratisation tool</h4>
+        </div>
+        <div class="timeline-body">
+          <p>
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jt" title="Jorge Taiana">Jorge Taiana</a>,<span class="maiuscoletto">latma</span> Programme Director
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#nc" title="Nora Cortiña">Nora Cortiña</a>, Founder of the movement Mothers of Plaza de Mayo
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#jd" title="Jelena Đureinović">Jelena Đureinović</a>, PhD Candidate at Justus Liebig University
+            <!-- <br><a class="titolo_gc_europe" href="{{link_url::316}}#bm" title="Benyam Mezmur">Benyam Mezmur</a>, CRC Committee
+            <br><a class="titolo_gc_europe" href="{{link_url::316}}#vt" title="Vitit Muntarbhorn">Vitit Muntarbhorn</a>, Chulalongkorn University -->
+            </p>
+        </div>
+      </div>
+    </li>
 </ul>
 
-<h3 id="timeline">Module 2 - A transversal approach</h3>
+<h3 id="timeline">Module 2 - The Objectives of Memory Sites</h3>
 
 <ul class="timeline">
    <li class="timeline-inverted">
@@ -199,7 +228,7 @@
     
 </ul>
 
-<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 3 - Focus areas</h3>
+<h3 id="timeline" style="text-align:center; font-weight: 400;">Module 3 - A Comparative Perspective on the Concept and The "Museum" Design</h3>
 
 <ul class="timeline">
     <li>
