--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -175,7 +175,7 @@
     <a name="as"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Albie_Sachs_global_campus_eiuc.jpg" alt="Albie Sachs - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_africa">Former judge on the Constitutional Court of South Africa.</p>
+            <p class="ruolo_persona titolo_gc_africa">Former judge on the Constitutional Court of South Africa</p>
             <p class="subtitle_page_programme margin_bottom_20">Albie Sachs</p>
             <p class="margin_bottom_20">From a young age Albie Sachs played a prominent part in the struggle for justice in South Africa. As a result he was detained in solitary confinement, tortured by sleep deprivation and eventually blown up by a car bomb which cost him his right arm and the sight of an eye.</p>
             <div class="text_read_more">
@@ -285,7 +285,7 @@
     <a name="gu"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/george_ulrich.jpg" alt="George Ulrich - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">ema</span> Programme Director</p>
+            <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">GC</span> Academic Director</p>
             <p class="subtitle_page_programme margin_bottom_20">George Ulrich</p>
             <p class="margin_bottom_20">Prof. George Ulrich held the position of Rector and Professor of Human Rights at the Riga Graduate School of Law from 2009-2016. Prior to this, he served as Secretary General from 2003-2009 and as Academic Coordinator / Programme Director of EMA from 2001- 2004.</p>
             <div class="text_read_more">
