fixed spacing in lecturers with anchor name

--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -1,3 +1,12 @@
+<style type="text/css">
+a[name] {
+    position: relative;
+    top: -96px;
+    display: block;
+    height: 0;
+    width: 0;
+}
+</style>
 <div class="table_accordion">
     <a name="ms"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Maria_Sondereguer_global_campus_eiuc.jpg" alt="María Sonderéguer - Global Campus">
@@ -66,6 +75,7 @@
             </div>
         </div>
     </div>
+    <a name="jd"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jelena_Dureinovic_global_campus_eiuc.jpg" alt="Jelena Đureinović - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">PhD Candidate at Justus Liebig University</p>
