--- a/website/mshr/lecturers.html
+++ b/website/mshr/lecturers.html
@@ -1,5 +1,5 @@
 <style type="text/css">
-a[name] {
+.person-link {
     position: relative;
     top: -96px;
     display: block;
@@ -8,7 +8,7 @@ a[name] {
 }
 </style>
 <div class="table_accordion">
-    <a name="ms"></a>
+    <a class="person-link" id="ms"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Maria_Sondereguer_global_campus_eiuc.jpg" alt="María Sonderéguer - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Professor at the University of Quilmes</p>
@@ -33,7 +33,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="vb"></a>
+    <a class="person-link" id="vb"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Valeria_Barbuto_global_campus_eiuc.jpg" alt="Valeria Barbuto - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Anthropologist</p>
@@ -54,7 +54,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="nc"></a>
+    <a class="person-link" id="nc"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Nora_Cortinas_global_campus_eiuc.jpg" alt="Nora Cortiñas - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Founder of the movement Mothers of Plaza de Mayo</p>
@@ -75,7 +75,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="jd"></a>
+    <a class="person-link" id="jd"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jelena_Dureinovic_global_campus_eiuc.jpg" alt="Jelena Đureinović - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">PhD Candidate at Justus Liebig University</p>
@@ -96,7 +96,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="jg"></a>
+    <a class="person-link" id="jg"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jeremy_Gunn_global_campus_eiuc.jpg" alt="Jasminko Halilovic - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_arab"><span class="maiuscoletto">arma</span> Lecturer</p>
@@ -117,7 +117,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="jh"></a>
+    <a class="person-link" id="jh"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jasminko_Halilovic_global_campus_eiuc.jpg" alt="Jasminko Halilovic - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Founder and Director of the War Childhood Museum</p>
@@ -139,7 +139,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="pk"></a>
+    <a class="person-link" id="pk"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Prajak_Kongkirati_global_campus_eiuc.jpg" alt="Prajak Kongkirati - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_asia_pacific">Research Director of the Faculty of Political Science, Thammasat University, Thailand</p>
@@ -161,7 +161,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="an"></a>
+    <a class="person-link" id="an"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Alejandra_Naftal_global_campus_eiuc.jpg" alt="Alejandra Naftal - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Executive Director and co-curator of the ESMA Memory Site Museum</p>
@@ -182,7 +182,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="as"></a>
+    <a class="person-link" id="as"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Albie_Sachs_global_campus_eiuc.jpg" alt="Albie Sachs - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_africa">Former judge on the Constitutional Court of South Africa</p>
@@ -203,7 +203,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="ts"></a>
+    <a class="person-link" id="ts"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Tarik_Samarah_global_campus_eiuc.jpg" alt="Tarik Samarah - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Photographer and Founder of the Memorial Gallery</p>
@@ -225,7 +225,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="jt"></a>
+    <a class="person-link" id="jt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Jorge_Taiana_global_campus_eiuc.jpg" alt="Dr. Jorge E. Taiana - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america"><span class="maiuscoletto">latma</span> Programme Director</p>
@@ -246,7 +246,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="pt"></a>
+    <a class="person-link" id="pt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Patricia_Tappata_global_campus_eiuc2.jpg" alt="Patricia Tappatá Valdez - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_latin_america">Director of the CIPDH</p>
@@ -271,7 +271,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="vt"></a>
+    <a class="person-link" id="vt"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/moocs/mshr/Vesna_Terselic_global_campus_eiuc.jpg" alt="Vesna Teršelić - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_south_east_europe">Director of Documenta - Centre for Dealing with the Past, Right Livelihood Award Laureate</p>
@@ -292,7 +292,7 @@ a[name] {
             </div>
         </div>
     </div>
-    <a name="gu"></a>
+    <a class="person-link" id="gu"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/george_ulrich.jpg" alt="George Ulrich - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe"><span class="maiuscoletto">GC</span> Academic Director</p>
